Deskripsi perubahan yang dilakukan

--- a/index.html
+++ b/index.html
@@ -310,9 +310,10 @@
                     <img src="assets/icons/github.png" alt="GitHub" class="social-icon">
                 </a>
             </div>
-            <p class="copyright">&copy; 2025 Muhammad Muafi Abdillah. All Rights Reserved.</p>
+            <p class="copyright">&copy; Muhammad Muafi Abdillah. All Rights Reserved.</p>
         </div>
     </footer>
+
     <script src="js/script.js"></script>
 </body>
 </html>
